[gd_scene load_steps=3 format=3 uid="uid://d1nops0c21c1g"]

[ext_resource type="Theme" uid="uid://bau0pkkhsfd46" path="res://Assets/Default.tres" id="1_05pxn"]
[ext_resource type="Script" path="res://Script/Player/GUI/gui.gd" id="1_wqre2"]

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wqre2")

[node name="hp_bar" type="ProgressBar" parent="."]
offset_left = 128.0
offset_top = 16.0
offset_right = 239.0
offset_bottom = 48.0
value = 50.0
show_percentage = false

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BG" type="Panel" parent="Container"]
offset_left = 120.0
offset_top = 88.0
offset_right = 1016.0
offset_bottom = 608.0
theme = ExtResource("1_05pxn")

[node name="inventory" type="Control" parent="Container"]
anchors_preset = 0
offset_left = 120.0
offset_top = 88.0
offset_right = 160.0
offset_bottom = 128.0

[node name="profile" type="Control" parent="Container"]
anchors_preset = 0
offset_left = 120.0
offset_top = 88.0
offset_right = 160.0
offset_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 0
offset_left = 200.0
offset_top = 280.0
offset_right = 387.0
offset_bottom = 330.0
scale = Vector2(1.38084, 2.44)

[node name="inventory_button" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="profile_button" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Profil"

[connection signal="pressed" from="Container/VBoxContainer/inventory_button" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/profile_button" to="." method="_on_profile_button_pressed"]
